--- a/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
+++ b/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
@@ -134,7 +134,8 @@
         <mat-label class="font-bold-lg subtitle-margin required-indicator">{{
           'LIDI.SUBLINE_TYPE' | translate
         }}</mat-label>
-        <mat-form-field appearance="outline" class="form-outline">
+        <span class="fake-lable-space"></span>
+        <div [class.disabled]="form.disabled" class="multi-select-search">
           <mat-select
             data-cy="type"
             formControlName="sublineType"
@@ -144,15 +145,16 @@
               {{ 'LIDI.SUBLINE.TYPES.' + type | translate }}
             </mat-option>
           </mat-select>
-        </mat-form-field>
+        </div>
         <app-atlas-field-error [form]="form" controlName="sublineType"></app-atlas-field-error>
       </div>
 
-      <div class="d-flex flex-column col-3">
+      <div class="d-flex flex-column col-3 space-right">
         <mat-label class="font-bold-lg subtitle-margin required-indicator"
           >{{ 'LIDI.PAYMENT.TYPE' | translate }}
         </mat-label>
-        <mat-form-field appearance="outline" class="form-outline">
+        <span class="fake-lable-space"></span>
+        <div [class.disabled]="form.disabled" class="multi-select-search">
           <mat-select
             data-cy="paymentType"
             formControlName="paymentType"
@@ -162,7 +164,7 @@
               {{ 'LIDI.PAYMENT.' + type | translate }}
             </mat-option>
           </mat-select>
-        </mat-form-field>
+        </div>
         <app-atlas-field-error [form]="form" controlName="paymentType"></app-atlas-field-error>
       </div>
     </div>
