ATLAS-1115: fix main seacht date component

--- a/frontend/src/app/core/components/table-search/table-search.component.scss
+++ b/frontend/src/app/core/components/table-search/table-search.component.scss
@@ -47,6 +47,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 
 .search-date-field {
@@ -59,7 +60,10 @@
     border: unset;
     outline: unset;
     width: 100%;
-    padding-right: 3rem;
+  }
+
+  mat-datepicker-toggle {
+    width: 6%;
   }
 }
 
