--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
@@ -103,7 +103,7 @@
       <form *ngIf="editMode" class="col-12 d-flex">
         <bo-select
           [formGroup]="form"
-          class="col-6 me-3 mt-3"
+          class="col-6 pe-3 mt-3"
           controlName="businessOrganisation"
           data-cy="businessOrganisation"
           valueExtraction=""
