--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -99,7 +99,7 @@
     <form-date-range [formGroup]="form"></form-date-range>
   </div>
 
-  <div class="col-12 d-flex mt-3">
+  <div class="col-12 d-flex mt-3 pb-3">
     <div class="d-flex flex-column col-6 pe-3">
       <bo-select
         [formGroup]="form"
