--- a/frontend/src/app/pages/ttfn/detail/timetable-field-number-detail.component.html
+++ b/frontend/src/app/pages/ttfn/detail/timetable-field-number-detail.component.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="col-12 d-flex pb-3">
-      <div class="d-flex flex-column col-6">
+      <div class="d-flex flex-column col-6 pt-3">
         <bo-select
           [formGroup]="form"
           [sboidsRestrictions]="getBoSboidRestriction()"
