--- a/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
+++ b/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
@@ -120,7 +120,7 @@
       <form-date-range [formGroup]="form"></form-date-range>
     </div>
 
-    <div class="col-12 d-flex">
+    <div class="col-12 d-flex pt-3 pb-3">
       <div class="d-flex flex-column col-6 pe-3">
         <bo-select
           [formGroup]="form"
