ATLAS-1115: override dialog surface overflow

--- a/frontend/src/app/core/components/route-to-dialog/route-to-dialog.component.scss
+++ b/frontend/src/app/core/components/route-to-dialog/route-to-dialog.component.scss
@@ -5,7 +5,7 @@
   height: calc(100% - #{variables.$footerHeight});
   pointer-events: auto !important;
 
-  * {
+  .mat-mdc-dialog-surface {
     overflow: unset;
   }
 }
