ATLAS-1115: small changes

--- a/frontend/src/app/core/components/user/user.component.html
+++ b/frontend/src/app/core/components/user/user.component.html
@@ -1,4 +1,4 @@
-<ng-template [ngIf]="isAuthenticated" xmlns="http://www.w3.org/1999/html">
+<ng-template [ngIf]="isAuthenticated">
   <button [matMenuTriggerFor]="profile" id="user-menu-button" mat-button title="{{ userName }}">
     <div class="user-presentation d-inline-flex">
       <div class="user-icon bg-color-primary-500">
