--- a/frontend/src/app/pages/tth/overview/canton-card/canton-card.component.scss
+++ b/frontend/src/app/pages/tth/overview/canton-card/canton-card.component.scss
@@ -11,10 +11,12 @@
   border-radius: variables.$border-radius;
   box-shadow: 0 4px 40px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.5),
     4px 4px 4px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
 
   &:hover {
     box-shadow: 0 4px 40px rgba(33, 33, 33, 0.3), 0 1px 2px rgba(33, 33, 33, 0.3),
       4px 4px 4px rgba(33, 33, 33, 0.3), 0 4px 4px rgba(33, 33, 33, 0.3);
+    cursor: pointer;
   }
 }
 
@@ -26,12 +28,13 @@
   margin-left: auto;
 }
 
-a {
+.canton-text {
   text-decoration: none;
   display: flex;
   align-items: center;
   position: absolute;
   bottom: 1rem;
+  color: variables.$primary-400;
 
   &:hover {
     cursor: pointer;
