--- a/frontend/src/app/pages/tth/overview/timetable-hearing-overview.component.scss
+++ b/frontend/src/app/pages/tth/overview/timetable-hearing-overview.component.scss
@@ -7,8 +7,7 @@
   row-gap: 1.875rem;
 }
 
-@include variables.large-screen() {
-  .card-container {
-    margin-left: 237px;
-  }
+a {
+  text-decoration: none;
+  color: variables.$gray-900;
 }
