ATLAS-1005: small change after review

--- a/frontend/src/app/pages/tth/overview/canton-card/canton-card.component.html
+++ b/frontend/src/app/pages/tth/overview/canton-card/canton-card.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="canton-content-img ps-3">
-      <img alt="Atlas Logo" class="flag" src="assets/images/cantons/{{ canton.short }}.svg" />
+      <img alt="Canton Logo" class="flag" src="assets/images/cantons/{{ canton.short }}.svg" />
     </div>
   </div>
 </div>
