ATLAS-1006: init tth overview details WIP

--- a/frontend/src/app/pages/tth/overview/timetable-hearing-overview.component.html
+++ b/frontend/src/app/pages/tth/overview/timetable-hearing-overview.component.html
@@ -5,7 +5,7 @@
     </a>
   </div>
   <div class="card-container">
-    <a *ngFor="let canton of cantons">
+    <a *ngFor="let canton of cantons" [routerLink]="canton.path">
       <atlas-canton-card [canton]="canton"></atlas-canton-card>
     </a>
   </div>
