ATLAS-1006: add overiview with tabs

--- a/frontend/src/app/pages/tth/overview/timetable-hearing-overview.component.html
+++ b/frontend/src/app/pages/tth/overview/timetable-hearing-overview.component.html
@@ -1,7 +1,7 @@
 <div class="ps-5 pt-5 pb-5">
   <div class="card-container pt-5 pb-4">
     <a>
-      <atlas-canton-card [canton]="swiss"></atlas-canton-card>
+      <atlas-canton-card [canton]="swiss" [routerLink]="'ch/actual'"></atlas-canton-card>
     </a>
   </div>
   <div class="card-container">
