--- a/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
@@ -1,37 +1,10 @@
-<div *ngIf="!showEmptyComponent">
+<div *ngIf="!showEmptyTimeTableHearingComponent">
   <div class="white-table-container-no-tabs">
-    <div class="d-flex flex-row">
-      <div class="ps-3">
-        <img
-          alt="Canton Logo"
-          class="flag"
-          src="assets/images/cantons/{{ cantonShort.toUpperCase() }}.svg"
-        />
-      </div>
-      <div class="ps-4">
-        <div class="table-heading font-bold-4xl color-gray-900 mb-3">
-          {{ 'PAGES.TTH.TITLE_MENU' | translate }} {{ foundTimetableHearingYear.timetableYear }}
-        </div>
-        <div class="mb-5">
-          <span>{{
-            'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_PREFIX'
-              | translate
-                : {
-                    timeTableYear: foundTimetableHearingYear.timetableYear
-                  }
-          }}</span>
-          <span class="font-bold-base">{{
-            'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_POSTFIX'
-              | translate
-                : {
-                    hearingFrom: foundTimetableHearingYear.hearingFrom,
-                    hearingTo: foundTimetableHearingYear.hearingTo
-                  }
-          }}</span>
-        </div>
-      </div>
-    </div>
-
+    <app-timetable-hearing-overview-tab-heading
+      [cantonShort]="cantonShort"
+      [foundTimetableHearingYear]="foundTimetableHearingYear"
+      [hearingPlan]="hearingPlan"
+    ></app-timetable-hearing-overview-tab-heading>
     <app-table
       (editElementEvent)="editVersion($event)"
       (getTableElementsEvent)="getOverview($event)"
