ATLAS-1095: continue review with frontend

--- a/frontend/src/app/pages/user-administration/application-config/user-administration-application-config.component.html
+++ b/frontend/src/app/pages/user-administration/application-config/user-administration-application-config.component.html
@@ -53,7 +53,8 @@
         <span class="fake-lable-space"></span>
         <div [class.disabled]="readOnly" class="multi-select-search">
           <mat-select
-            [(value)]="permissionByApplication().swissCantons"
+            (selectionChange)="cantonSelectionChanged($event)"
+            [(value)]="cantonSelection"
             [disabled]="readOnly"
             class="font-bold-base"
             multiple
