--- a/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
@@ -5,6 +5,26 @@
       [foundTimetableHearingYear]="foundTimetableHearingYear"
       [hearingPlan]="hearingStatus"
     ></app-timetable-hearing-overview-tab-heading>
+
+    <div class="d-flex flex-column col-3 pe-3 pb-3">
+      <mat-label class="font-bold-lg subtitle-margin"
+        >{{ 'TTH.SELECT_CANTON' | translate }}
+      </mat-label>
+      <span class="fake-lable-space"></span>
+      <div class="multi-select-search">
+        <mat-select
+          (selectionChange)="changeSelectedCanton($event)"
+          [(value)]="dafaultCantonSelection"
+          data-cy="type"
+          placeholder="{{ 'FORM.DROPDOWN_PLACEHOLDER' | translate }}"
+        >
+          <mat-option *ngFor="let canton of CANTON_OPTIONS" [value]="canton">
+            {{ 'TTH.CANTON.' + canton | translate }}
+          </mat-option>
+        </mat-select>
+      </div>
+    </div>
+
     <app-table
       (editElementEvent)="editVersion($event)"
       (getTableElementsEvent)="getOverview($event)"
