ATLAS-1006: add display-date pipe

--- a/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
@@ -77,10 +77,11 @@
                 }
         }}</span>
       </div>
-      <div *ngIf="hearingStatus !== 'active'">
+      <div *ngIf="hearingStatus === 'planned'">
         <span
-          >{{ this.foundTimetableHearingYear.hearingFrom }} {{ 'COMMON.TO' | translate }}
-          {{ this.foundTimetableHearingYear.hearingTo }}</span
+          >{{ this.foundTimetableHearingYear.hearingFrom | displayDate }}
+          {{ 'COMMON.TO' | translate }}
+          {{ this.foundTimetableHearingYear.hearingTo | displayDate }}</span
         >
       </div>
     </div>
